--- a/TopiTunesAppsDemo/TopiTunesAppsDemo/Base.lproj/Main.storyboard
+++ b/TopiTunesAppsDemo/TopiTunesAppsDemo/Base.lproj/Main.storyboard
@@ -95,13 +95,14 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ht3-1x-dCR">
-                                                    <rect key="frame" x="74" y="59" width="54" height="15"/>
+                                                    <rect key="frame" x="74" y="56" width="54" height="15"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="14.5" id="JOI-ea-WRE"/>
                                                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="15" id="dgy-PZ-jbd"/>
                                                         <constraint firstAttribute="width" constant="183" id="upB-zw-GxY"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                     <variation key="default">
                                                         <mask key="constraints">
@@ -110,26 +111,27 @@
                                                     </variation>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="developer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cbi-RQ-u4A">
-                                                    <rect key="frame" x="74" y="39" width="238" height="15"/>
+                                                    <rect key="frame" x="74" y="40" width="238" height="15"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="15" id="0HA-2b-m1e"/>
                                                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="15" id="ROl-br-9ce"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottomMargin" secondItem="Ht3-1x-dCR" secondAttribute="bottom" constant="11.5" id="8JO-Of-1Zj"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="Ht3-1x-dCR" secondAttribute="bottom" constant="14.5" id="68o-qb-8Hu"/>
+                                                <constraint firstItem="Ht3-1x-dCR" firstAttribute="top" secondItem="cbi-RQ-u4A" secondAttribute="bottom" constant="1" id="8Rb-F9-ckT"/>
                                                 <constraint firstItem="bZK-Me-ZDg" firstAttribute="leading" secondItem="etH-Fb-UHj" secondAttribute="leadingMargin" constant="4" id="9LT-US-Fg4"/>
-                                                <constraint firstItem="cbi-RQ-u4A" firstAttribute="top" secondItem="etH-Fb-UHj" secondAttribute="topMargin" constant="31" id="AOm-OJ-6fq"/>
+                                                <constraint firstItem="Ht3-1x-dCR" firstAttribute="leading" secondItem="bZK-Me-ZDg" secondAttribute="trailing" constant="8" id="Bsg-cg-qI9"/>
                                                 <constraint firstItem="qZr-H3-DIr" firstAttribute="leading" secondItem="bZK-Me-ZDg" secondAttribute="trailing" constant="8" id="GdB-Cn-NsH"/>
-                                                <constraint firstItem="cbi-RQ-u4A" firstAttribute="leading" secondItem="bZK-Me-ZDg" secondAttribute="trailing" constant="8" id="KJB-lT-EkJ"/>
-                                                <constraint firstItem="cbi-RQ-u4A" firstAttribute="trailing" secondItem="etH-Fb-UHj" secondAttribute="trailingMargin" id="M4U-MB-WeK"/>
-                                                <constraint firstItem="Ht3-1x-dCR" firstAttribute="leading" secondItem="bZK-Me-ZDg" secondAttribute="trailing" constant="8" id="Qbn-45-Mi3"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="Ht3-1x-dCR" secondAttribute="trailing" constant="184" id="KJJ-m7-eLf"/>
                                                 <constraint firstItem="qZr-H3-DIr" firstAttribute="top" secondItem="etH-Fb-UHj" secondAttribute="topMargin" constant="12" id="agS-tT-NZb"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="Ht3-1x-dCR" secondAttribute="trailing" constant="184" id="bvc-if-9CV"/>
-                                                <constraint firstItem="Ht3-1x-dCR" firstAttribute="top" secondItem="cbi-RQ-u4A" secondAttribute="bottom" constant="5" id="hKH-eY-2Dn"/>
+                                                <constraint firstItem="cbi-RQ-u4A" firstAttribute="trailing" secondItem="etH-Fb-UHj" secondAttribute="trailingMargin" id="ast-ex-bR7"/>
+                                                <constraint firstItem="cbi-RQ-u4A" firstAttribute="centerY" secondItem="etH-Fb-UHj" secondAttribute="centerY" id="ni1-M1-m1B"/>
+                                                <constraint firstItem="cbi-RQ-u4A" firstAttribute="leading" secondItem="bZK-Me-ZDg" secondAttribute="trailing" constant="8" id="re6-mW-1Bu"/>
                                                 <constraint firstItem="bZK-Me-ZDg" firstAttribute="centerY" secondItem="etH-Fb-UHj" secondAttribute="centerY" id="tOX-iZ-ITU"/>
                                                 <constraint firstItem="qZr-H3-DIr" firstAttribute="trailing" secondItem="etH-Fb-UHj" secondAttribute="trailingMargin" id="vEO-ac-8er"/>
                                             </constraints>
