--- a/TopiTunesAppsDemo/TopiTunesAppsDemo/Base.lproj/Main.storyboard
+++ b/TopiTunesAppsDemo/TopiTunesAppsDemo/Base.lproj/Main.storyboard
@@ -204,23 +204,57 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="tcB-Zg-Dct">
-                                <rect key="frame" x="20" y="57" width="288" height="491"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="eyG-vI-23x">
+                                <rect key="frame" x="16" y="57" width="288" height="495"/>
+                                <subviews>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="tcB-Zg-Dct">
+                                        <rect key="frame" x="0.0" y="0.0" width="288" height="200"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="200" id="pha-MA-gvy"/>
+                                        </constraints>
+                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="rqT-Fp-HD6">
+                                        <rect key="frame" x="0.0" y="224" width="288" height="271"/>
+                                        <color key="backgroundColor" red="0.70780098899999999" green="1" blue="0.12649088459999999" alpha="1" colorSpace="calibratedRGB"/>
+                                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="iwk-8g-Ld4">
+                                            <size key="itemSize" width="50" height="50"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                        <cells>
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="ZXN-gB-KU1">
+                                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                </view>
+                                            </collectionViewCell>
+                                        </cells>
+                                    </collectionView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="tcB-Zg-Dct" firstAttribute="top" secondItem="eyG-vI-23x" secondAttribute="top" id="JUt-zS-tdR"/>
+                                    <constraint firstAttribute="trailing" secondItem="tcB-Zg-Dct" secondAttribute="trailing" id="XTv-Ze-Yyf"/>
+                                    <constraint firstItem="tcB-Zg-Dct" firstAttribute="leading" secondItem="eyG-vI-23x" secondAttribute="leading" id="hZq-31-NJR"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="zMA-2x-1Vf" firstAttribute="top" secondItem="tcB-Zg-Dct" secondAttribute="bottom" constant="20" id="1Ig-0n-uMu"/>
+                            <constraint firstItem="eyG-vI-23x" firstAttribute="top" secondItem="lz5-lc-Qga" secondAttribute="bottom" constant="8" id="0tK-p0-1Xo"/>
                             <constraint firstItem="lz5-lc-Qga" firstAttribute="leading" secondItem="AIa-41-q3w" secondAttribute="leadingMargin" constant="8" id="4j6-nR-P30"/>
-                            <constraint firstItem="tcB-Zg-Dct" firstAttribute="leading" secondItem="AIa-41-q3w" secondAttribute="leadingMargin" constant="4" id="PE8-Jh-ZTK"/>
+                            <constraint firstItem="zMA-2x-1Vf" firstAttribute="top" secondItem="eyG-vI-23x" secondAttribute="bottom" constant="16" id="TP7-Sp-koP"/>
                             <constraint firstItem="lz5-lc-Qga" firstAttribute="trailing" secondItem="AIa-41-q3w" secondAttribute="trailingMargin" constant="8" id="WIv-A8-Sad"/>
+                            <constraint firstItem="eyG-vI-23x" firstAttribute="leading" secondItem="AIa-41-q3w" secondAttribute="leadingMargin" id="dIE-ai-msV"/>
                             <constraint firstItem="lz5-lc-Qga" firstAttribute="top" secondItem="jmx-Gu-DKJ" secondAttribute="bottom" constant="8" id="h6N-27-3Rm"/>
-                            <constraint firstItem="tcB-Zg-Dct" firstAttribute="trailing" secondItem="AIa-41-q3w" secondAttribute="trailingMargin" constant="4" id="hy4-w6-iiX"/>
-                            <constraint firstItem="tcB-Zg-Dct" firstAttribute="top" secondItem="lz5-lc-Qga" secondAttribute="bottom" constant="8" id="kqa-Kt-Xcu"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="eyG-vI-23x" secondAttribute="trailing" id="mFc-V3-xdb"/>
                         </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
